--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "skpm build",
     "watch": "skpm build --watch",
-    "publish": "skpm publish",
+    "publish": "skpm publish -n",
     "link": "skpm link"
   },
   "author": "Logan McAnsh <logan@mcan.sh> (https://mcan.sh)",
@@ -19,5 +19,7 @@
   "skpm": {
     "manifest": "src/manifest.json",
     "main": "Find Instances.sketchplugin"
-  }
+  },
+  "main": "index.js",
+  "repository": "git@github.com:mcansh/sketch-find-all-instances-of-symbol.git"
 }
